@@ -13,11 +13,17 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.sorted.commons.beans.Item;
+import com.sorted.commons.beans.UsersBean;
 import com.sorted.commons.entity.mongo.BaseMongoEntity;
 import com.sorted.commons.entity.mongo.Cart;
+import com.sorted.commons.entity.mongo.Category_Master;
 import com.sorted.commons.entity.mongo.Products;
 import com.sorted.commons.entity.service.Cart_Service;
+import com.sorted.commons.entity.service.Category_MasterService;
 import com.sorted.commons.entity.service.ProductService;
+import com.sorted.commons.entity.service.Users_Service;
+import com.sorted.commons.enums.Activity;
+import com.sorted.commons.enums.Permission;
 import com.sorted.commons.enums.ResponseCode;
 import com.sorted.commons.exceptions.CustomIllegalArgumentsException;
 import com.sorted.commons.helper.AggregationFilter.SEFilter;
@@ -25,6 +31,7 @@ import com.sorted.commons.helper.AggregationFilter.SEFilterType;
 import com.sorted.commons.helper.AggregationFilter.WhereClause;
 import com.sorted.commons.helper.SERequest;
 import com.sorted.commons.helper.SEResponse;
+import com.sorted.commons.utils.CommonUtils;
 import com.sorted.portal.assisting.beans.CartItems;
 import com.sorted.portal.assisting.beans.CartItemsBean;
 import com.sorted.portal.request.beans.CartCRUDBean;
@@ -43,11 +50,25 @@ public class ManageCart_BLService {
 	@Autowired
 	private ProductService productService;
 
-	@PostMapping("/create")
-	public SEResponse create(HttpServletRequest httpServletRequest) {
+	@Autowired
+	private Users_Service users_Service;
+
+	@Autowired
+	private Category_MasterService category_MasterService;
+
+	@PostMapping("/fetch")
+	public SEResponse fetch(HttpServletRequest httpServletRequest) {
 		try {
 			String req_user_id = httpServletRequest.getHeader("req_user_id");
-//			String req_role_id = httpServletRequest.getHeader("req_role_id");
+			UsersBean usersBean = users_Service.validateUserForActivity(req_user_id, Permission.VIEW,
+					Activity.CART_MANAGEMENT);
+			switch (usersBean.getRole().getUser_type()) {
+			case CUSTOMER:
+			case GUEST:
+				break;
+			default:
+				throw new CustomIllegalArgumentsException(ResponseCode.ACCESS_DENIED);
+			}
 			SEFilter filterC = new SEFilter(SEFilterType.AND);
 			filterC.addClause(WhereClause.eq(Cart.Fields.user_id, req_user_id));
 			filterC.addClause(WhereClause.eq(BaseMongoEntity.Fields.deleted, false));
@@ -55,34 +76,8 @@ public class ManageCart_BLService {
 			Cart cart = cart_Service.repoFindOne(filterC);
 			if (cart == null) {
 				cart = new Cart();
-			}
-
-			CartBean cartBean = this.getCartBean(filterC, cart);
-			return SEResponse.getBasicSuccessResponseObject(cartBean, ResponseCode.SUCCESSFUL);
-		} catch (CustomIllegalArgumentsException ex) {
-			throw ex;
-		} catch (Exception e) {
-			log.error("/signup/verify:: exception occurred");
-			log.error("/signup/verify:: {}", e.getMessage());
-			throw new CustomIllegalArgumentsException(ResponseCode.ERR_0001);
-		}
-	}
-
-	@PostMapping("/fetch")
-	public SEResponse fetch(HttpServletRequest httpServletRequest) {
-		try {
-			String req_user_id = httpServletRequest.getHeader("req_user_id");
-//			String req_role_id = httpServletRequest.getHeader("req_role_id");
-			if (!StringUtils.hasText(req_user_id)) {
-				throw new CustomIllegalArgumentsException(ResponseCode.MISSING_USER_ID);
-			}
-			SEFilter filterC = new SEFilter(SEFilterType.AND);
-			filterC.addClause(WhereClause.eq(Cart.Fields.user_id, req_user_id));
-			filterC.addClause(WhereClause.eq(BaseMongoEntity.Fields.deleted, false));
-
-			Cart cart = cart_Service.repoFindOne(filterC);
-			if (cart == null) {
-				throw new CustomIllegalArgumentsException(ResponseCode.NO_RECORD);
+				cart.setUser_id(req_user_id);
+				cart = cart_Service.create(cart, req_user_id);
 			}
 
 			CartBean cartBean = this.getCartBean(filterC, cart);
@@ -99,12 +94,9 @@ public class ManageCart_BLService {
 	@PostMapping("/addToCart")
 	public SEResponse update(@RequestBody SERequest request, HttpServletRequest httpServletRequest) {
 		try {
-			String req_user_id = httpServletRequest.getHeader("req_user_id");
-//			String req_role_id = httpServletRequest.getHeader("req_role_id");
-			if (!StringUtils.hasText(req_user_id)) {
-				throw new CustomIllegalArgumentsException(ResponseCode.MISSING_USER_ID);
-			}
 			CartCRUDBean req = request.getGenericRequestDataObject(CartCRUDBean.class);
+			CommonUtils.extractHeaders(httpServletRequest, req);
+			UsersBean usersBean = users_Service.validateUserForActivity(req.getReq_user_id(), Activity.MANAGE_ADDRESS);
 			if (req.getItem() == null) {
 				throw new CustomIllegalArgumentsException(ResponseCode.NO_ITEMS);
 			}
@@ -118,7 +110,7 @@ public class ManageCart_BLService {
 			}
 
 			SEFilter filterC = new SEFilter(SEFilterType.AND);
-			filterC.addClause(WhereClause.eq(Cart.Fields.user_id, req_user_id));
+			filterC.addClause(WhereClause.eq(Cart.Fields.user_id, usersBean.getId()));
 			filterC.addClause(WhereClause.eq(BaseMongoEntity.Fields.deleted, false));
 
 			Cart cart = cart_Service.repoFindOne(filterC);
@@ -128,7 +120,7 @@ public class ManageCart_BLService {
 			List<Item> listItems = new ArrayList<>();
 			if (itemBean.getQuantity() == 0) {
 				List<Item> cart_items = cart.getCart_items().stream()
-						.filter(e -> !e.getProduct_id().equals(itemBean.getProduct_id())).collect(Collectors.toList());
+						.filter(e -> !e.getProduct_id().equals(itemBean.getProduct_id())).toList();
 				if (!CollectionUtils.isEmpty(cart_items)) {
 					listItems.addAll(cart_items);
 				}
@@ -143,13 +135,29 @@ public class ManageCart_BLService {
 				}
 
 				if (product.getQuantity().compareTo(itemBean.getQuantity()) < 0) {
-					throw new CustomIllegalArgumentsException(ResponseCode.INVALID_QUANTITY);
+					throw new CustomIllegalArgumentsException(ResponseCode.OUT_OF_STOCK);
+				}
+
+				SEFilter filterCM = new SEFilter(SEFilterType.AND);
+				filterCM.addClause(WhereClause.eq(BaseMongoEntity.Fields.id, product.getCategory_id()));
+				filterCM.addClause(WhereClause.eq(BaseMongoEntity.Fields.deleted, false));
+
+				Category_Master category_Master = category_MasterService.repoFindOne(filterCM);
+				if (category_Master == null) {
+					throw new CustomIllegalArgumentsException(ResponseCode.MISSING_CATAGORY);
+				}
+
+				boolean secure_item = category_Master.isSecure_item();
+				boolean is_secure_item = itemBean.isSecure_item();
+				if (is_secure_item && !secure_item) {
+					throw new CustomIllegalArgumentsException(ResponseCode.CANNOT_SECURE);
 				}
 
 				Item item = new Item();
 				item.setProduct_id(product.getId());
 				item.setQuantity(itemBean.getQuantity());
 				item.setProduct_code(product.getProduct_code());
+				item.set_secure(is_secure_item);
 
 				listItems.add(item);
 				if (!CollectionUtils.isEmpty(cart.getCart_items())) {
@@ -160,9 +168,8 @@ public class ManageCart_BLService {
 
 			cart.setCart_items(listItems);
 
-			cart_Service.update(cart.getId(), cart, req_user_id);
+			cart_Service.update(cart.getId(), cart, usersBean.getId());
 
-			// TODO:: add items
 			CartBean cartBean = this.getCartBean(filterC, cart);
 			return SEResponse.getBasicSuccessResponseObject(cartBean, ResponseCode.SUCCESSFUL);
 		} catch (CustomIllegalArgumentsException ex) {
@@ -196,6 +203,7 @@ public class ManageCart_BLService {
 						items.setQuantity(e.getQuantity());
 						items.setSelling_price(products.getSelling_price());
 						items.setIn_stock(products.getQuantity().compareTo(e.getQuantity()) >= 0);
+						items.setSecure_item(e.is_secure());
 						cartItems.add(items);
 					}
 				});
